2006-10-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	For PR automake/492.
	* automake.in (output_flag): Set to `-o' for Assembler and
	preprocessed Assembler, assuming that all understand `-c -o'.
	* THANKS, NEWS: Update.
	* tests/subobj10.test: New test.
	* tests/Makefile.am: Update.
	Report by Thomas Schwinge.

	* automake.in (%_macro_for_cond): New variable.
	(cond_stack_if): Use it for better error message about
	missing dependency tracking conditionals.
	* tests/asm2.test: New test, modeled after asm.test.
	* tests/Makefile.am: Adjust.
	Report by Ralf Corsepius.

	* doc/automake.texi (Options): `no-dependencies' is similar
	to `--ignore-deps', not `--include-deps'.
	* m4/as.m4 (AM_PROG_AS): If `no-dependencies', do not invoke
	_AM_DEPENDENCIES.
	* tests/nodep2.test: New test.
	* tests/Makefile.am: Adjust.

	* automake.in (handle_LIBOBJS_or_ALLOCA): If we are in the
	LIBOBJDIR, then we should not add a DEPDIR prefix.
	* tests/pr401.test: Update test.
	* tests/pr401b.test: Likewise.
	* tests/pr401c.test: Likewise.
	Report by Jim Meyering and Eric Blake.

	* lib/depcomp (gcc3): Put dependency extraction flags before the
	`-c' flag, so they appear at the same position as in %FASTDEP%
	mode in depend2.am.  Fixes build failure for FreeBSD's c89,
	which ignores unknown options only after the first non-option.
	Bug report against M4 by Nelson H. F. Beebe.

2006-10-14  Bruno Haible  <bruno@clisp.org>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in ($seen_gettext_intl): New variable.
	(handle_gettext): Consider it.
	(scan_autoconf_traces): Add AM_GNU_GETTEXT_INTL_SUBDIR to the list.
	Set $seen_gettext_intl when it is seen.
	* doc/automake.texi (gettext, Optional): Update.
	* tests/gettext3.test: New test.
	* tests/Makefile.am: Update.

2006-10-14  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh (posix_mkdir): Reject FreeBSD 6.1 mkdir -p -m,
	which incorrectly sets the mode of an existing destination