@@ -837,6 +837,7 @@ register_language ('name' => 'asm',
 		   'flags' => ['CCASFLAGS'],
 		   # Users can set AM_CCASFLAGS to include DEFS, INCLUDES,
 		   # or anything else required.  They can also set CCAS.
+		   # Or simply use Preprocessed Assembler.
 		   'compile' => '$(CCAS) $(AM_CCASFLAGS) $(CCASFLAGS)',
 		   'compiler' => 'CCASCOMPILE',
 		   'compile_flag' => '-c',
@@ -853,10 +854,7 @@ register_language ('name' => 'cppasm',
 
 		   'autodep' => 'CCAS',
 		   'flags' => ['CCASFLAGS', 'CPPFLAGS'],
-		   # Users can set AM_CCASFLAGS to include DEFS, INCLUDES,
-		   # or anything else required beyond AM_CPPFLAGS.  They
-		   # can also set CCAS.
-		   'compile' => '$(CCAS) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS)',
+		   'compile' => '$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS)',
 		   'compiler' => 'CPPASCOMPILE',
 		   'compile_flag' => '-c',
 		   'output_flag' => '-o',
