@@ -5,6 +5,9 @@ New in 1.9c:
   - subdir-object mode works now with Assembler.  Automake assumes
     that the compiler understands `-c -o'.
 
+  - Preprocessed assembler (*.S) compilation now also honors
+    $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES).
+
 * Miscellaneous changes:
 
   - The script `install-sh' needs to have executable permissions for
