@@ -1,5 +1,11 @@
 2006-10-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* automake.in: For preprocessed assembler, add `$(DEFS)
+	$(DEFAULT_INCLUDES) $(INCLUDES)' to the compile rule.
+	* doc/automake.texi (Assembly Support): Update.
+	* NEWS: Update.
+	Suggested by Thomas Schwinge and Ralf Corsepius.
+
 	For PR automake/492.
 	* automake.in (output_flag): Set to `-o' for Assembler and
 	preprocessed Assembler, assuming that all understand `-c -o'.
